WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91441
[Chromium] AccessibilityController shouldn't know anything about TestShell
https://bugs.webkit.org/show_bug.cgi?id=91441
Summary
[Chromium] AccessibilityController shouldn't know anything about TestShell
Adam Barth
Reported
2012-07-16 16:23:35 PDT
[Chromium] AccessibilityController shouldn't know anything about TestShell
Attachments
Patch
(5.37 KB, patch)
2012-07-16 16:24 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-07-16 16:24:26 PDT
Created
attachment 152639
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-16 21:01:04 PDT
Comment on
attachment 152639
[details]
Patch Clearing flags on attachment: 152639 Committed
r122804
: <
http://trac.webkit.org/changeset/122804
>
WebKit Review Bot
Comment 3
2012-07-16 21:01:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug