[Chromium] AccessibilityController shouldn't know anything about TestShell https://bugs.webkit.org/show_bug.cgi?id=91441

Reviewed by Tony Chang.

This patch is a precursor to moving AccessibilityController.cpp into TestRunner.a.

* DumpRenderTree/chromium/AccessibilityController.cpp:
(AccessibilityController::AccessibilityController):
(AccessibilityController::getFocusedElement):
(AccessibilityController::getRootElement):
* DumpRenderTree/chromium/AccessibilityController.h:
(WebKit):
(AccessibilityController):
(AccessibilityController::setWebView):
* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::initialize):
(TestShell::createMainWindow):
(TestShell::~TestShell):


Canonical link: https://commits.webkit.org/109270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122804 268f45cc-cd09-0410-ab3c-d52691b4dbfc